Add support of Unsafe.getInt() and Unsafe.getLong() including test improvements